# class_mchd_1

./: .gitignore  .pre-commit-config.yaml  README.md  justfile  pyproject.toml
docs/IDEs/: variants.md
docs/about/: me.md
src/class_mchd_1/x01_intro/x01_first_output/: x01_run.py
src/class_mchd_1/x01_intro/x02_variable/: x01_variable.py
src/class_mchd_1/x01_intro/x03_debugger/: x01_debugger.py
src/class_mchd_1/x01_intro/x04_string/: x01_string.py  x02_string_f_string.py  x03_concatenation.py  x04_methods_for_builtins.py
src/class_mchd_1/x02_base_with_functions/x01_functions/: x01_function.py  x02_function_and_arguments.py  x03_function_and_constants.py  x04_type_alias_and_new_type.py
src/class_mchd_1/x02_base_with_functions/x02_name_main_idiom/: x010_function.py
src/class_mchd_1/x02_base_with_functions/x03_numbers_int_and_float/: x010_int_and_float.py  x011_operations.py  x012_round.py  x012_shortcuts_for_self_operations.py  x020_careful_with_float.py
src/class_mchd_1/x02_base_with_functions/x04_boolean_type__and__control_via_if/: x010_bool.py  x011_if.py  x012_if_2.py
src/class_mchd_1/x02_base_with_functions/x05_loop_for__first_meet/: x010_loop_for__first_meet.py  x011_loop_for__more_control.py  x020_type_list.py  x021_len_of_sequence.py  x022_index_of_sequence.py  x023_list__iteration_note.py  x024_list_comprehension.py
src/class_mchd_1/x02_base_with_functions/x06__loop_while/: x010_loop_while.py  x010_loop_while__more_control.py
src/class_mchd_1/x02_base_with_functions/x07_type_dictionary/: x010_type_dict.py
src/class_mchd_1/x02_base_with_functions/x08_input/: x010_input.py
src/class_mchd_1/x02_base_with_functions/x09_exception/: x010_exception.py  x020_more_exceptions.py
src/class_mchd_1/x03_datetime_time_math_str_regex/x01_datetime_time/: main.py
src/class_mchd_1/x03_datetime_time_math_str_regex/x02_str_regex/: x01_str.py  x02_regex.py
src/class_mchd_1/x03_datetime_time_math_str_regex/x02_str_regex/check_email/: __init__.py  check_is_email_valid.py
src/class_mchd_1/x03_datetime_time_math_str_regex/x02_str_regex/check_email/tests/: test_check_is_email_valid.py  test_simple.py
src/class_mchd_1/x03_datetime_time_math_str_regex/x02_str_regex/get_all_words/: main.py
src/class_mchd_1/x04_obj_pytest_venv/x01_class_and_object_intro/: x01_first.py  x02_other_constructors.py  x03_annotate.py  x04_protocol.py
src/class_mchd_1/x04_obj_pytest_venv/x02_venv/: main.py
